# RagChatBot

./: .env  .gitignore  graph.py  hybrid.py  ingest.py  keyword.db  logger.py  main.py  pyproject.toml  rag.py  reranker.py  retrievers.py
chroma_db/: chroma.sqlite3
chrome_db/2b089d9b-6267-47c7-a819-8e2f6a8ee8d3/: index_metadata.pickle
