[project]
name = "simpleragbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pytz>=2026.2",
    "sentence-transformers>=5.5.1",
    "uuid>=1.30",
]
